package com.sportdataauth.model;

public enum Role {
	ADMIN,
	AGENT,
	CLIENT
}

