package com.sportdataauth.model;

public enum TokenPurpose {
	FIRST_PASSWORD_SET,
	PASSWORD_RESET
}
