package com.sportdataauth.model;

public enum UserStatus {
    ACTIVE,
    LOCKED,
    DISABLED
}