package com.sportdataauth.security;

public interface PasswordHasher {	
	String hash(String rawPassword);
	boolean matches(String rawPassword, String hashedPassword);
}
