package com.sportdataauth.util;

import java.time.Instant;

public interface Clock {
	Instant now();
}
